[project]
name = "wf-honeycomb-rds"
dynamic = ["version"]

[tool.poetry]
name = "wf-honeycomb-rds"
version = "0.1.0"
description = "A library for performing basic read/write operations directly from/to the RDS database which underlies Wildflower's Honeycomb service"
authors = ["Theodore Quinn <ted.quinn@wildflowerschools.org>"]
maintainers = ["Theodore Quinn <ted.quinn@wildflowerschools.org>"]
readme = "README.md"
keywords = []
repository = "https://github.com/WildflowerSchools/wf-honeycomb-rds"
license = "MIT"
packages = [{include = "honeycomb_rds"}]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python"
]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.0"
pytest = "^7.2.0"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.setuptools]
py-modules = []

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
